--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,16 +1,13 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-    Log In
+    Enter new password
 {% endblock title %}
 {% block content %}
-    <h2>Log In</h2>
+    <h1>Set a new password!</h1>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-success ml-2" type="submit">Log In</button>
+        <input class="btn btn-success" type="submit" value="Change my password">
     </form>
-    <p>
-        <a href="{% url 'password_reset' %}">Forgot your password?</a>
-    </p>
 {% endblock content %}
