--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,11 @@
             <header class="p-3 mb-3 border-bottom">
                 <div class="container">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                        <a class="navbar-brand" href="{% url 'home' %}">Newspaper</a>
+                        <a class="navbar-brand text-primary" href="{% url 'home' %}"><span class="display-6">Newspaper</span></a>
                         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                             {% if user.is_authenticated %}
                                 <li>
-                                    <a href="#" class="nav-link px-2 link-dark">+ New</a>
+                                    <a href="{% url 'article_new' %}" class="nav-link px-2 link-dark">+ New</a>
                                 </li>
                             </ul>
                             <div class="dropdown text-end">
