--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,10 +1,31 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+<!-- new! -->
 {% block content %}
     <div class="article-entry">
         <h2>{{ object.title }}</h2>
         <p>by {{ object.author }} | {{ object.date }}</p>
         <p>{{ object.body }}</p>
     </div>
+    <!-- Changes start here! -->
+    <hr>
+    <h4>Comments</h4>
+    {% for comment in article.comment_set.all %}
+        <p>
+            <span class="font-weight-bold">{{ comment.author }} -</span>
+            {{ comment }}
+        </p>
+    {% endfor %}
+    <hr>
+    <!-- Changes end here! -->
+    <!-- Changes for adding a comment start here! -->
+    <h4>Add a comment</h4>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success ml-2" type="submit">Save</button>
+    </form>
+    <!-- Changes end here! -->
     <p>
         <a href="{% url 'article_edit' article.pk %}">Edit</a> |
         <a href="{% url 'article_delete' article.pk %}">Delete</a>
