--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -10,10 +10,21 @@
                 <span class="text-muted">by {{ article.author }} |
                 {{ article.date }}</span>
             </div>
-            <div class="card-body">{{ article.body }}</div>
-            <div class="card-footer text-center text-muted">
-                <a href="{% url 'article_edit' article.pk %}">Edit</a> | <a href="{% url 'article_delete' article.pk %}">Delete</a>
+            <div class="card-body">
+                <!-- Changes start here! -->
+                <p>{{ article.body }}</p>
+                <a href="{% url 'article_edit' article.pk %}">Edit</a> |
+                <a href="{% url 'article_delete' article.pk %}">Delete</a>
             </div>
+            <div class="card-footer">
+                {% for comment in article.comment_set.all %}
+                    <p>
+                        <span class="font-weight-bold">{{ comment.author }} -</span>
+                        {{ comment }}
+                    </p>
+                {% endfor %}
+            </div>
+            <!-- Changes end here! -->
         </div>
         <br />
     {% endfor %}
